styles was added

--- a/shop.html
+++ b/shop.html
@@ -14,8 +14,8 @@
 	<link rel='stylesheet' id='laon_wine_house-fontello-css' href='css/fontello/css/fontello-embedded.css' type='text/css' media='all' />
 	<link rel='stylesheet' id='laon_wine_house-main-css' href='css/style.min.css' type='text/css' media='all' />
 	<link rel='stylesheet' id='laon_wine_house-animation-css' href='css/animation.css' type='text/css' media='all' />
-	<link rel='stylesheet' id='laon_wine_house-colors-css' href='css/__colors.css' type='text/css' media='all' />
-	<link rel='stylesheet' id='laon_wine_house-styles-css' href='css/__styles.css' type='text/css' media='all' />
+	<link rel='stylesheet' id='laon_wine_house-colors-css' href='css/colors.css' type='text/css' media='all' />
+	<link rel='stylesheet' id='laon_wine_house-styles-css' href='css/styles.css' type='text/css' media='all' />
 	<link rel='stylesheet' id='laon_wine_house-responsive-css' href='css/responsive.min.css' type='text/css' media='all' />
 </head>
 <body class="archive post-type-archive post-type-archive-product woocommerce woocommerce-page body_tag body_style_wide scheme_default blog_mode_shop  is_stream blog_style_excerpt sidebar_hide expand_content header_style_header-1 header_position_default header_title_on menu_style_top no_layout vc_responsive">
@@ -24,7 +24,7 @@
 			<header class="top_panel top_panel_style_1 without_bg_image scheme_default">
 				<a class="menu_mobile_button"></a>
 				<div class="top_panel_fixed_wrap"></div>
-				<div class="top_panel_navi						scheme_default">
+				<div class="top_panel_navi scheme_default">
 					<div class="menu_main_wrap clearfix">
 						<div class="content_wrap">
 							<a class="logo" href="index.html"><img src="images/logo2.svg" class="logo_main" alt="" /></a>
