--- a/shop.html
+++ b/shop.html
@@ -433,7 +433,7 @@
 	<script type='text/javascript' src='js/vendor/jquery.js'></script>
 	<script type='text/javascript' src='js/vendor/jquery-migrate.min.js'></script>
 	<script type='text/javascript' src='js/vendor/plugins/trx_addons/js/trx_addons.js'></script>
-	<script type='text/javascript' src='js/__scripts.js'></script>
+	<script type='text/javascript' src='js/scripts.js'></script>
 	<script type='text/javascript' src='js/custom/custom.js'></script>
 	<a href="#" class="trx_addons_scroll_to_top trx_addons_icon-up" title="Scroll to top"></a>
 </body>
