styles was fixed

--- a/product.html
+++ b/product.html
@@ -16,8 +16,8 @@
 	<link rel='stylesheet' id='laon_wine_house-fontello-css' href='css/fontello/css/fontello-embedded.css' type='text/css' media='all' />
 	<link rel='stylesheet' id='laon_wine_house-main-css' href='css/style.min.css' type='text/css' media='all' />
 	<link rel='stylesheet' id='laon_wine_house-animation-css' href='css/animation.css' type='text/css' media='all' />
-	<link rel='stylesheet' id='laon_wine_house-colors-css' href='css/__colors.css' type='text/css' media='all' />
-	<link rel='stylesheet' id='laon_wine_house-styles-css' href='css/__styles.css' type='text/css' media='all' />
+	<link rel='stylesheet' id='laon_wine_house-colors-css' href='css/colors.css' type='text/css' media='all' />
+	<link rel='stylesheet' id='laon_wine_house-styles-css' href='css/styles.css' type='text/css' media='all' />
 	<link rel='stylesheet' id='laon_wine_house-custom-css' href='css/custom.css' type='text/css' media='all' />
 	<link rel='stylesheet' id='laon_wine_house-responsive-css' href='css/responsive.min.css' type='text/css' media='all' />
 </head>
@@ -434,7 +434,7 @@
 	<script type='text/javascript' src='js/vendor/plugins/woocommerce/assets/js/frontend/cart-fragments.min.js'></script>
 	<script type='text/javascript' src='js/vendor/ui/widget.min.js'></script>
 	<script type='text/javascript' src='js/vendor/ui/tabs.min.js'></script>
-	<script type='text/javascript' src='js/__scripts.js'></script>
+	<script type='text/javascript' src='js/scripts.js'></script>
 	<script type='text/javascript' src='js/custom/custom.js'></script>
 	<a href="#" class="trx_addons_scroll_to_top trx_addons_icon-up" title="Scroll to top"></a>
 </body>
